--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.21",
+    "@types/yup": "^0.32.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "yup": "^0.32.11"
   }
 }
